@@ -14,31 +14,16 @@
  * You should have received a copy of the GNU General Public License
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ******************************************************************************/
-package mobac.mapsources.mappacks.openstreetmap;
+package mobac.exceptions;
 
-import java.net.HttpURLConnection;
+public class StopAllDownloadsException extends TileException {
 
-import mobac.mapsources.AbstractHttpMapSource;
-import mobac.program.ProgramInfo;
-import mobac.program.model.TileImageType;
-
-public abstract class AbstractOsmTileSource extends AbstractHttpMapSource {
-
-	public AbstractOsmTileSource(String name) {
-		super(name, 0, 18, TileImageType.PNG);
+	public StopAllDownloadsException(String message, Throwable cause) {
+		super(message, cause);
 	}
 
-	public String getTileUrl(int zoom, int tilex, int tiley) {
-		return "/" + zoom + "/" + tilex + "/" + tiley + ".png";
+	public StopAllDownloadsException(String message) {
+		super(message);
 	}
 
-	public TileImageType getTileImageType() {
-		return TileImageType.PNG;
-	}
-
-	@Override
-	protected void prepareTileUrlConnection(HttpURLConnection conn) {
-		super.prepareTileUrlConnection(conn);
-		conn.setRequestProperty("User-agent", ProgramInfo.getUserAgent());
-	}
 }
