@@ -17,11 +17,9 @@
 package mobac.mapsources.mappacks.openstreetmap;
 
 import java.io.IOException;
-import java.net.HttpURLConnection;
 import java.util.concurrent.Semaphore;
 
 import mobac.exceptions.TileException;
-import mobac.program.ProgramInfo;
 import mobac.program.interfaces.HttpMapSource;
 
 public class Mapnik extends AbstractOsmTileSource {
@@ -57,12 +55,6 @@ public class Mapnik extends AbstractOsmTileSource {
 
 	public HttpMapSource.TileUpdate getTileUpdate() {
 		return HttpMapSource.TileUpdate.IfNoneMatch;
-	}
-
-	@Override
-	protected void prepareTileUrlConnection(HttpURLConnection conn) {
-		super.prepareTileUrlConnection(conn);
-		conn.setRequestProperty("User-agent", ProgramInfo.getUserAgent());
 	}
 
 	@Override
